# hunter-cmakeifier

./: .travis.yml  CMakeLists.txt  cdep.yml  cmakeify.yml
.cdep/examples/cmake/: cmakeify.yml
